# adl

./: Cargo.toml  Taskfile.yml
.github/workflows/: rust-release.yaml
adl/: adl.work.json  adl.work1.json  adl.work2.json  adl.work3.json
adl/adlc/: adl.pkg.json  bundle.adl  packaging.adl  workspace.adl
adl/adlc/adlc/: packaging.adl
adl/adlc_dev/: adl.pkg.json  testing_table.adl
adl/stdlib/: adl.bundle.json  adl.pkg.json
adl/stdlib/adlc/: adl.pkg.json  packaging.adl
adl/stdlib/sys/: adlast2.adl  types.adl  types.adl-rs
adl/tests/: struct01.adl  testing_table.json  typealias01.adl  typealias02.adl  typeexpr01.adl  typeexpr02.adl  typeexpr04.adl  typeexpr05.adl  typeexpr06.adl  typeexpr07.adl  typeexpr08.adl  union03.adl
adl/tests/scopedname/: abc.adl  def.adl  def02.adl
adl/tools/: adl.bundle  adl.bundle.json  go.mod
go/: go.mod  go.sum
go/generator/: ast.json  ast2jen.go  go.mod  go.sum  main.go  tmpl_ast.go
haskell/compiler/: Main.hs  adl-compiler.cabal
rust/: Cargo.toml
rust/adl_cli/: Cargo.toml
rust/adl_core/: Cargo.toml
rust/adl_core/src/: lib.rs
rust/adl_core/src/adlgen/adlc/: bundle.rs  mod.rs  testing_table.rs  workspace.rs
rust/adl_core/src/adlstdlib/: mod.rs
rust/adl_core/src/processing/: loader.rs  resolver.rs
rust/adl_rustgen/: Cargo.toml
rust/adl_tsgen/: Cargo.toml
rust/adl_tsgen/src/: astgen.rs  defaultval.rs  generate.rs  lib.rs  tests.rs  tsgen.rs  utils.rs
rust/adl_tsgen/src/ts-runtime/: package-dist.json
rust/compiler/: Cargo.toml  Readme.md  genadl.sh
typescript/workspace/: adl.work.json  pnpm-lock.yaml
(+77 files in other folders)
