[package]
name = "adl_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
log = "0.4.17"
rust-embed = "6.6.1"
serde_ignored = "0.1.7"

serde = { version = "1.0.130", features=["derive"] }
serde_json = "1.0.68"
nom = "7.0.0"
nom_locate = "4.0.0"
